--- a/sell_furniture/src/app/app.component.html
+++ b/sell_furniture/src/app/app.component.html
@@ -1,3 +1,7 @@
-
-
-<app-main></app-main>
+<div class="app-container">
+    <app-top-bar></app-top-bar>
+  
+    <router-outlet></router-outlet>
+  
+    <app-signin-modal></app-signin-modal>
+  </div>
