--- a/sell_furniture/src/app/components/signin-modal/signin-modal.component.html
+++ b/sell_furniture/src/app/components/signin-modal/signin-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal" *ngIf="authenticationService.showModal()">
     <div class="modal-content">
       <span class="close" (click)="close()">&times;</span>
-      <h2>Connexion</h2>
+      <h2>Connexion As Admin</h2>
       <form (ngSubmit)="submit()">
         <label>Username</label>
         <input type="text" [(ngModel)]="username" name="username" required />
