--- a/sell_furniture/src/app/app.component.html
+++ b/sell_furniture/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="app-container">
-    <app-top-bar></app-top-bar>
+  <app-top-bar>
+<p> hello ve</p>
+  </app-top-bar>
   
     <router-outlet></router-outlet>
   
