--- a/sell_furniture/src/app/components/add-new/add-new.component.scss
+++ b/sell_furniture/src/app/components/add-new/add-new.component.scss
@@ -75,4 +75,27 @@
     cursor: pointer;
   }
   
+  .cloudinary-images {
+    margin: 1rem 0;
+  }
+  .image-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  .image-grid div {
+    border: 2px solid transparent;
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+  }
+  .image-grid div.selected {
+    border-color: #007bff;
+  }
+  .image-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   
